# DiplomaMSU

./: .gitignore  CMakeLists.txt
resource/data/: test_file
resource/fortran/: Fortran.f08
src/: computation_service.c  data_gen.c  main.c  read_write_print.c  secondary_functions.c
src/headers/: computation_service.h  data_gen.h  read_data.h  read_write_print.h  secondary_functions.h
src/include/: computation_service.h  data_gen.h  read_write_print.h
